--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.jpa.database= HSQL
+spring.jpa.show-sql= true
+spring.hsql.console.enabled=true
+
+spring.datasource.url=jdbc:hsqldb:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driverClassName=org.hsqldb.jdbcDriver
