--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.url=jdbc:hsqldb:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.hsqldb.jdbcDriver
+
+
+
+server.port=8088
